[gd_scene load_steps=2 format=3 uid="uid://cf8qeptkvo1k2"]

[ext_resource type="Script" path="res://scenes/lobby/lobby_escape.gd" id="1_7thso"]

[node name="LobbyEscape" type="Node2D"]
script = ExtResource("1_7thso")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -192.0
offset_top = -108.0
offset_right = 192.0
offset_bottom = 108.0
color = Color(0.2, 0.2, 0.2, 1)
metadata/_edit_lock_ = true

[node name="EscapeAsk" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 42.0
offset_top = 47.0
offset_right = 342.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 30
text = "Do you want to quit?"
metadata/_edit_lock_ = true

[node name="EscapeYes" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = 24.0
offset_right = -21.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Yes"
metadata/_edit_lock_ = true

[node name="EscapeNo" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 213.0
offset_top = 132.0
offset_right = 315.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 20
text = "No"
metadata/_edit_lock_ = true

[connection signal="button_up" from="ColorRect/EscapeYes" to="." method="_on_escape_yes_button_up"]
[connection signal="button_up" from="ColorRect/EscapeNo" to="." method="_on_escape_no_button_up"]
